Fixed invisible link bug. Issue 2.

--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -12,9 +12,9 @@ pre {
   font-size: 11px;
 }
 
-a { color: #fff; }
-a:visited { color: #fff; }
-a:hover { color: #fff; background-color:#000; }
+a { color: #000; }
+a:visited { color: #000; }
+a:hover { color: #000; background-color:#000; }
 
 .fieldWithErrors {
   padding: 2px;
